// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interaction test 1 1`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="India (भारत): + 91"
      type="button"
    >
      <div
        class="flag in"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(flags.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+91 12121"
  />
</div>
`;

exports[`Interaction test 1 2`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="India (भारत): + 91"
      type="button"
    >
      <div
        class="flag in"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(flags.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+91 12121-12"
  />
</div>
`;

exports[`Interaction test 2 1`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="India (भारत): + 91"
      type="button"
    >
      <div
        class="flag in"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+91 12121"
  />
</div>
`;

exports[`Interaction test 2 2`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="Hong Kong (香港): + 852"
      type="button"
    >
      <div
        class="flag hk"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+852 1212 1121"
  />
</div>
`;

exports[`Keyboard event with searching in the list 1`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="India (भारत): + 91"
      type="button"
    >
      <div
        class="flag in"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+91 12121"
  />
</div>
`;

exports[`Keyboard event with searching in the list 2`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="Haiti: + 509"
      type="button"
    >
      <div
        class="flag ht"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+509 1212-1"
  />
</div>
`;

exports[`Keyboard events with escape key at the end 1`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="India (भारत): + 91"
      type="button"
    >
      <div
        class="flag in"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+91 12121"
  />
</div>
`;

exports[`keyboard event up/down 1`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="India (भारत): + 91"
      type="button"
    >
      <div
        class="flag in"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+91 12121"
  />
</div>
`;

exports[`keyboard event up/down 2`] = `
<div
  class="react-tel-input"
  data-test-id="src_reacttelephoneinput_test_id_4"
>
  <div
    class="flag-dropdown"
    data-test-id="src_reacttelephoneinput_test_id_6"
  >
    <button
      class="selected-flag"
      data-test-id="src_reacttelephoneinput_test_id_7"
      title="Guinea (Guinée): + 224"
      type="button"
    >
      <div
        class="flag gn"
        data-test-id="src_reacttelephoneinput_test_id_8"
        style="background-image: url(/flags.723494a4.png);"
      >
        <div
          class="arrow"
          data-test-id="src_reacttelephoneinput_test_id_9"
        />
      </div>
    </button>
    
  </div>
  <input
    autocomplete="tel"
    class="form-control"
    data-test-id="src_reacttelephoneinput_test_id_5"
    placeholder="+1 (702) 123-4567"
    type="tel"
    value="+224-12-121"
  />
</div>
`;
